@@ -38,6 +38,9 @@ class AggregatedFields extends ProcessorPluginBase {
         'description' => $this->t('An aggregation of multiple other fields.'),
         'type' => 'string',
         'processor_id' => $this->getPluginId(),
+        // Most aggregation types are single-valued, but "Union" isn't, and we
+        // can't know which will be picked, so err on the side of caution here.
+        'is_list' => TRUE,
       ];
       $properties['aggregated_field'] = new AggregatedFieldProperty($definition);
     }
